fetch: menyambungakan pembayaran
